--- a/createPost.html
+++ b/createPost.html
@@ -24,7 +24,7 @@
         <nav class="postNav">
           <ul class="postBtn">
             <li><button type="button" class="btn btn-light">Edit</button></li>
-            <li><button type="button" class="btn btn-light">Preview</button></li>
+            <li><a href="preview.html" class="btn btn-light">preview</a></button></li>
           </ul>
         </nav>
     </div>
@@ -141,7 +141,7 @@
       </footer>
     </div>
     </form>
-
+    <script src="peticiones.js" type="module"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
