--- a/createPost.html
+++ b/createPost.html
@@ -42,8 +42,8 @@
       </header>
       <div class="formArea col-6">
         <div class="labelForm">
-          <label for="" >Add a cover image
-            <input class="inputForm" type="file">
+          <label for="" >
+            <input class="inputForm" placeholder="Add a cover image" type="text">
           </label>
         </div>
         <div class="postTitle">
