--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
             <div class="col" id="main__section">
                 <div class="container-fluid m-0 w-100">
-                    <ul class="nav">
+                   <!-- <ul class="nav">
                         <li class="nav-item" >
                             <a href="#" class="nav-link active" aria-current="page" id="main-nav-link">
                                 Relevant
@@ -164,7 +164,39 @@
                                 Top
                             </a>
                         </li>
+                    </ul>-->
+
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link active" aria-current="page" id="main-nav-link">
+                                Relevant
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link" id="main-nav-link-2">
+                                Latest
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link" id="main-nav-link-2" onclick="showLinks()">
+                                Top
+                            </a>
+                        </li>
+                        <li class="nav-link" id="main-nav-link-2" >
+                            <a href="#" id="year-link-2" style="display: none;  color: black;">
+                                Year
+                            </a>
+                        </li>
+                        <li class="nav-link" id="main-nav-link-2" >
+                            <a href="#" id="month-link-2" style="display: none; color: black;">
+                                Month
+                            </a>
+                        </li>
                     </ul>
+                    
+
+
+
             
                     <div class="container-fluid mt-2"> <!--Card 2-->
                         <div class="card">
@@ -178,8 +210,8 @@
                                         <h5>
                                             Necati Özmen
                                         </h5>
-                                        <small>
-                                            Nov 19 • Originally published at refine.dev
+                                        <small id="date">
+                                            <!--Nov 19 • Originally published at refine.dev-->
                                         </small>
                                     </div>
                                 </div>
@@ -247,8 +279,8 @@
                                     <h5>
                                         Tia Eastwood
                                     </h5>
-                                    <small>
-                                        Nov 13 (5 days ago)
+                                    <small id="date">
+                                       <!-- Nov 13 (5 days ago)-->
                                     </small>
                                 </div>
                             </div>
@@ -316,8 +348,8 @@
                                     <h5>
                                         Tapajyoti Bose
                                     </h5>
-                                    <small>
-                                        Posted on 12 Nov
+                                    <small id="date">
+                                        <!--Posted on 12 Nov-->
                                     </small>
                                 </div>
                             </div>
@@ -385,8 +417,8 @@
                                     <h5>
                                         Dennis Persson
                                     </h5>
-                                    <small>
-                                        Posted on 13 nov • Originally published at perssondennis.com
+                                    <small id="date">
+                                        <!--Posted on 13 nov • Originally published at perssondennis.com-->
                                     </small>
                                 </div>
                             </div>
@@ -525,6 +557,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>        <script src="script/viewList.js"></script>
 </body>
 
 </html>
